install(FILES
	background.svg
	Eliminator-Funk-2.jpg
	gon-defends-the-critters-1.jpg
	Light-Industry-3.jpg
	mahogany-handjob-1.jpg
	Rear-Admiral-Diplomat-1.jpg
	Time-For-Lunch-2.jpg
	Thighmaster-Accident-3.jpg
	With-Every-Step-1.jpg
	withered-monkey-paw-1.jpg
DESTINATION ${DATA_INSTALL_DIR}/palapeli/backgrounds)
